istio-service-discovery/k8s/service-a-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-a
  namespace: demo
spec:
  selector:
    app: service-a
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
