istio-service-discovery/k8s/mygateways.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-gateway
  namespace: demo
spec:
  selector:
    istio: ingressgateway # Use the default ingress gateway from Istio
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
