istio-service-discovery/k8s/jaeger-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - monitoring-gateway
  http:
    - match:
        - uri:
            prefix: "/jaeger"
      rewrite:
        uri: "/"  # This rewrites /jaeger to / when sending to the Jaeger service
      route:
        - destination:
            host: jaeger
            port:
              number: 16686
