istio-service-discovery/k8s/monitoring-virtual-services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: monitoring
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - monitoring-gateway
  http:
    - match:
        - uri:
            prefix: "/kiali"
      route:
        - destination:
            host: kiali
            port:
              number: 20001
    - match:
        - uri:
            prefix: "/graph"
      route:
        - destination:
            host: prometheus.istio-system.svc.cluster.local
            port:
              number: 9090
    - match:
        - uri:
            prefix: "/jaeger"
      route:
        - destination:
            host: jaeger
            port:
              number: 16686
    - match:
        - uri:
            prefix: "/grafana"
      route:
        - destination:
            host: grafana
            port:
              number: 3000
