istio-service-discovery/k8s/prometheus-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus
  namespace: istio-system
spec:
  hosts:
    - "prometheus.sumangcodes.info"  # Use a dedicated hostname
  gateways:
    - monitoring-gateway
  http:
    - route:
        - destination:
            host: prometheus-server
            port:
              number: 80
